assets/css/general/button.css
.button {
    align-items: center;
    background-color: var(--white-color);
    border: 1px solid var(--light-gray-color);
    border-radius: 3px;
    color: var(--brand-color);
    cursor: pointer;
    display: inline-flex;
    font-size: 11px;
    font-weight: 800;
    height: 36px;
    justify-content: center;
    letter-spacing: 0.5px;
    outline: none;
    padding: 0 15px;
    text-transform: uppercase;
}

.button:hover {
    border-color: var(--mid-gray-color);
    opacity: 1;
}

.button .icon-loading {
    display: none;
}

.button.loading {
    text-indent: -9999px;
}

.button.loading .icon-loading {
    display: block;
}

.button-secondary {
    color: var(--darker-gray-color);
}

.button-icon {
    align-items: center;
    background-color: transparent;
    border: 0;
    color: var(--darker-gray-color);
    cursor: pointer;
    display: inline-flex;
    height: 30px;
    justify-content: center;
    outline: none;
    padding: 0;
    width: 30px;
}

.button-icon:hover .icon {
    opacity: 0.8;
}

.button-text {
    background-color: transparent;
    border: 0;
    cursor: pointer;
    line-height: inherit;
    outline: none;
    padding: 0;
}

